@@ -1,3 +1,9 @@
+2003-07-16  Per Bothner  <per@bothner.com>
+
+	* ApplyExp.java (compile):  Check if func's closureEnv is null.
+	Fixes by reported by Chris.Dean@sokitomi.com 03-19.
+	Needed because of 03-02 change to LambdaExp.java.
+
 2003-07-15  Chris Dean  <Chris.Dean@sokitomi.com>
 
 	* PrimProcedure.java: Add invoke-special to call super classes.
